# gnosis

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  .gitignore  main.py  openapi.json  package.json  pyproject.toml
apps/api/api/v1/: graph.py
apps/api/core/: clients.py  config.py  exceptions.py
apps/api/models/: schemas.py
apps/api/scripts/: export_openapi.py
apps/api/services/: embedding.py  inference.py  vector_store.py
apps/web/: next.config.ts  orval.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: error-boundary.tsx  futuristic-background.tsx  island-select-dialog.tsx  mind-map.tsx  neural-log.tsx  omni-bar.tsx  providers.tsx  suggestion-dropdown.tsx  typo-dialog.tsx  unrelated-topic-dialog.tsx
apps/web/hooks/: use-fuzzy-search.ts  use-graph-state.ts
apps/web/lib/: fuzzy-match.ts  mock-data.ts  spell-check.ts
apps/web/lib/api/: fetcher.ts
apps/web/lib/api/schemas/: expandRequest.ts  expandRequestSourceNodeId.ts  expandResponse.ts  graphEdge.ts  graphEdgeLabel.ts  graphNode.ts  graphNodeReason.ts  graphNodeType.ts  hTTPValidationError.ts  healthResponse.ts  healthResponseServices.ts  healthResponseStatus.ts  index.ts  seedRequest.ts  (+7 more)
docs/: README.md
docs/explanation/: architecture.md  semantic-search.md  tech-stack.md
docs/how-to/: add-llm-provider.md  configure-api-keys.md  deploy-production.md  run-development.md
docs/reference/: api.md  configuration.md  schemas.md
docs/tutorials/: first-graph.md  getting-started.md
